<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:backgroundTint="@color/yellow_soft"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/recipe_evaluation_card_iv"
            android:layout_width="138dp"
            android:layout_height="133dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/splash_panda"
            android:visibility="visible"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ProgressBar
            android:id="@+id/recipe_evaluation_card_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:indeterminateTint="@color/green_200"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintEnd_toEndOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintTop_toTopOf="@+id/recipe_evaluation_card_iv" />

        <TextView
            android:id="@+id/recipe_evaluation_card_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="@font/krona_one"
            android:gravity="center"
            android:text="@string/placeholder"
            app:layout_constraintEnd_toEndOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintTop_toBottomOf="@+id/recipe_evaluation_card_iv" />

        <TextView
            android:id="@+id/recipe_evaluation_card_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:fontFamily="@font/rokkitt_semibold"
            android:gravity="center"
            android:text="@string/text_null"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/recipe_evaluation_card_rating"
            app:layout_constraintTop_toTopOf="@+id/recipe_evaluation_card_rating" />

        <TextView
            android:id="@+id/recipe_evaluation_card_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:fontFamily="@font/rokkitt_semibold"
            android:gravity="center"
            android:text="@string/text_null"
            android:textSize="34sp"
            app:layout_constraintStart_toEndOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintTop_toTopOf="@+id/recipe_evaluation_card_iv" />

        <TextView
            android:id="@+id/recipe_evaluation_card_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_rating"
            app:layout_constraintTop_toBottomOf="@+id/recipe_evaluation_card_rating"
            tools:text="@string/text_difficulty" />

        <TextView
            android:id="@+id/recipe_evaluation_card_created_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt"
            app:layout_constraintBottom_toBottomOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintStart_toEndOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_created"
            tools:text="@string/text_date" />

        <TextView
            android:id="@+id/recipe_evaluation_card_difficulty_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rokkitt"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_difficulty"
            app:layout_constraintTop_toBottomOf="@+id/recipe_evaluation_card_difficulty"
            tools:text="@string/text_rating" />

        <TextView
            android:id="@+id/recipe_evaluation_card_comment"
            android:layout_width="351dp"
            android:layout_height="90dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/recipe_evaluation_card_difficulty"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintTop_toBottomOf="@+id/recipe_evaluation_card_username" />

        <TextView
            android:id="@+id/recipe_evaluation_card_created"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:text="@string/placeholder"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/recipe_evaluation_card_created_label"
            app:layout_constraintStart_toEndOf="@+id/recipe_evaluation_card_iv"
            app:layout_constraintTop_toBottomOf="@+id/recipe_evaluation_card_rating_label"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
